--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -2,21 +2,17 @@
 
 \chapter{Case decomposition meets ellipsis}
 
-At the beginning of the previous chapter I discussed the case scale active in headless relatives: \tsc{nom < acc < dat}. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy.
+At the beginning of the previous chapter I showed that the case scale \tsc{nom < acc < dat} appears in headless. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} notes: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
-``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.'' \pgcitep{pittner1995}{201} (footnote 4)
+What I showed as well in the previous chapter is the case scale \tsc{nom < acc < dat} is a wide-spread phenomenon: it recurs. The scale can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
+In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.}
+The case scale also appears within morphology in syncretism patterns and formal containment. \pgcitet{pittner1995}{201:fn.4} mentioned the role of morphology: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
-What I showed as well in the previous chapter is the pattern \tsc{nom < acc < dat} is reccurring. It can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
-In this dissertation I do not work out an account for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in different syntactic phenomena.}
-We also see it in morphology with syncretism patterns and formal containment. Morphology was also mentioned by Pittner.
+The question arises what the nature of this case hierarchy is. Are there multiple hierarchies active in different subparts of language (i.e. syntax and morphology)? Or is there a single hierarchy that is made reference to from different the subparts of syntax and morphology? And how are syntax and morphology then connected? I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.]{caha2019}.\footnote{
+This intuition has been worked out in a different way in \posscitet{himmelreich2017} dissertation.
+} Specifically, I show that the case scale naturally follows assuming that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.
 
-``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.'' \pgcitep{pittner1995}{201} (footnote 4)
-
-Do we have an abstract hierarchy that we make reference to time and time again? In an ideal analysis, the hierarchy exists once and all the other occurrences are reflexes of the first one. That also means we want morphology and syntax be connected.
-
-That's exactly what I'm going to propose. (this intuition has been worked out in a different way in Himmelreich's dissertation.)
-
-First I show where the case hierarchy is, which is in morphology, with actual structural containment: \tsc{[[[nom]acc]dat]}. What we see in syntax is a by-product of the morphology, it's a consequence, it's an indirect relation. cause and effect
+In this chapter I show that the case scale can be derived is case is decomposed. The precise facts in headless relatives relatives follow after adding an ellipsis that deletes phrases.
 
 
 \section{Case decomposition}
@@ -26,25 +22,24 @@ The intuition: case is complex
 containment:
 
 \exg. luw -e:l -na\\
- 3\tsc{sg}.\ac{nom} -\ac{acc} -\ac{dat}\\ \flushfill{Kalderaš Romani, \pgcitealt{boretzky1994}{31-46}}
+ 3\tsc{sg}.\ac{nom} -\ac{acc} -\ac{dat}\\ \flushfill{Khanty, \pgcitealt{nikolaeva1999}{16}}
 
 syncretism:
 
 contigent zones, no ABA. spellout is not only exact match, but also a subset of the features can be a match
 
-I show how this can be derived exactly, within Nanosyntax, the framework which this proposal works in.
+I show how this can be derived, within Nanosyntax, the framework in which I work this proposal out.
 
 
 
 \subsection{The basic idea}
 
-The claim: case should be decomposed
+\citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows monotonically.
+This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \tsc{f}1) plus one extra (here \tsc{f}2). Dative has all the features accusative has (\tsc{f} and \tsc{f}2) plus one extra (\tsc{f}3).
 
-(\citealt{caha2009,caha2013} and later \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018})
-
-\begin{table}[h]
+\begin{table}[ht]
   \center
-	\caption {Decomposed cases}
+	\caption {Case decomposed}
 		\begin{tabular}{ll}
     \toprule
     case      & features                      \\
@@ -54,35 +49,51 @@ The claim: case should be decomposed
     \tsc{dat} & \tsc{f}1, \tsc{f}2, \tsc{f}3  \\
     \bottomrule
     \end{tabular}
+    \label{tbl:case-decomposed}
 \end{table}
 
-With that in place, case containment and syncretism does not longer come as a surprise.
+The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next section shows how case containment and syncretism effects follow naturally. Later in this chapter I show how the decomposition also derives the case competition facts in headless relatives.
 
+%should I talk about alternatives and why they do not work?
 
 \subsection{Deriving case containment}
 
-\exg. luw -e:l -na\\
- 3\tsc{sg}.\ac{nom} -\ac{acc} -\ac{dat}\\ \flushfill{Kalderaš Romani, \pgcitealt{boretzky1994}{31-46}}
+In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
 
+\begin{table}[ht]
+  \center
+  \caption {Containment in \tsc{3sg} in Khanty}
+    \input{tables/containment-nom-acc-dat.tex}
+  \label{tbl:cont-khanty-3sg}
+\end{table}
 
+The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
 
+I work the proposal in this dissertation out in Nanosyntax. I provide background assumptions on the framework wherever necessary to follow the discussion as I proceed. At this point I discuss the general architecture of Nanosyntax and its lexicon.
 
+The architecture of Nanosyntax is schematically shown in Figure \ref{fig:nano} \citep[from][]{vandenwyngaerd2020,caha2019}. In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' that enter the syntax. The only way complex feature structures come to exist is a a result of merge.
+After syntax (more specifically, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between syntactic representations on the one hand and phonology (PF) and concepts (CF) on the other hand. So, Nanosyntax is a late insertion model: syntax happens before (lexical) insertion takes place.
 
-in general the organization of nano
+\begin{figure}[ht]
+  \centering
+  \begin{tikzpicture}[node distance = 1cm, auto]
+    \tikzstyle{block} = [rectangle, draw, text width=5em, text centered, rounded corners, minimum height=2em]
+    \tikzstyle{line} = [draw, -latex']
+      \node [block] (syntax) {Syntax};
+      \node [block, below of=syntax, node distance=1.5cm] (lexicon) {Lexicon};
+      \node [block, below left=0.5cm and -1cm of lexicon] (pf) {PF};
+      \node [block, below right=0.5cm and -1cm of lexicon] (cf) {CF};
+      \path [line] (syntax) -- (lexicon);
+      \path [line] (lexicon) -- (pf);
+      \path [line] (lexicon) -- (cf);
+  \end{tikzpicture}
+  \caption{Nanosyntactic model of grammar}
+  \label{fig:nano}
+\end{figure}
 
-insert figure with syntax, lexicon, pf and cf
+Now we turn to what the lexicon looks like in Nanosyntax.
 
-
-only syntax can make complex syntactic structures
-
-The specific implications of this claim are strengthened by the way Nanosyntax
-treats complex feature structures. In particular, the core assumption is that
-the only way how a complex feature structure can arise is for it to be assembled
-by Merge. Complex feature structures are never the input to syntax, they are
-always its product. Syntactic trees are therefore not assembled from some preexisting
-‘feature bundles’ or any similar complex building blocks (lexical items).
-The idea is that syntax starts from single, atomic, indivisible grammatical features,
-ideally the same for all languages (cf. Cinque \& Rizzi 2008).
+In the lexicon there are lexical entries.
 
 
 what's in the lexion?
