--- a/tables/containment-nom-acc-dat.tex
+++ b/tables/containment-nom-acc-dat.tex
@@ -1,19 +1,12 @@
 % !TEX root = ../thesis.tex
 
-\begin{tabular}{clll}
+\begin{tabular}{cl}
 \toprule
-          & \ac{1}\ac{sg}
-          & \ac{3}\ac{sg}
-          & \ac{1}\ac{pl}                           \\
-          \cmidrule{2-4}
-\ac{nom}  & ma
-          & luw
-          & muŋ                                     \\
-\ac{acc}  & ma:\tbf{-ne:m}
-          & luw\tbf{-e:l}
-          & muŋ\tbf{-e:w}                           \\
-\ac{dat}  & ma:\tbf{-ne:m}\tcol{DG}{\tbf{-na}}
-          & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}
-          & muŋ\tbf{-e:w}\tcol{DG}{\tbf{-na}}       \\
+          & \ac{3}\ac{sg} \\
+          \cmidrule{2-2}
+\ac{nom}
+          & luw                                     \\
+\ac{acc}  & luw\tbf{-e:l}                           \\
+\ac{dat}  & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}       \\
 \bottomrule
 \end{tabular}
