--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,8 @@
 \addbibresource{fenna-files/references.bib}
 \usepackage{fenna-files/abbreviations}
 
+\usepackage{fixltx2e}
+
 \title{Case competition in headless relatives}
 \author{Fenna Bergsma}
 \date{\today}
