--- a/variation.tex
+++ b/variation.tex
@@ -2,6 +2,53 @@
 
 \chapter{The variation}
 
+\section{\ac{ohg} and \ac{mg} have the same winner}
+
+\subsection{\ac{mg}}
+
+let me show that the claim I made for Gothic holds for \ac{mg} as well: \tsc{dat} wins over \tsc{acc} wins over \tsc{nom}.
+
+\ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+
+\exg. *Ich {lade ein}, \tbf{wer} \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
+
+\ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+
+\exg. *Ich vertraue, \tbf{wer} \tbf{Hitchcock} \tbf{mag}.\\
+ I trust\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
+ `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
+
+\ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
+
+ \exg. *Uns besucht wer \tbf{Maria} \tbf{mag}.\\
+  Us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+  `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
+
+\ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
+
+ \exg. *Ich {lade ein} wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+  I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
+
+\ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
+
+ \exg. *Ich vertraue \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+  I trust\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria likes\scsub{[acc]}.\\
+  `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
+
+\ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
+
+ \exg. *Uns besucht wer \tbf{Maria} \tbf{vertraut}.\\
+  us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria trusts\scsub{[dat]}\\
+  `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
+
+\subsection{\ac{ohg}}
+
+same holds for \ac{ohg} but you just can't give the ungrammatical examples. but they are not attested.
+
+
 
 \section{The different patterns}
 
@@ -21,7 +68,6 @@ In Italian, case mismatch is not allowed.
 		\ac{mg} 	& ✔			 							&	*									\\
 		\ac{ohg}	& *										&	✔									\\
 		Gothic		&	✔										&	✔									\\
-		Italian		&	*										& *									\\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -31,185 +77,180 @@ In Italian, case mismatch is not allowed.
 \subsection{Both: Gothic}
 
 
-\input{tables/gothic-grammaticality.tex}
-
-
-\subsection{Only from external: Old High German}
-
-
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
-\a. \ac{nom} not attested
-\bg. ih bibringu fona Juda [dhen mina berga chisetzit]\\
- I educate\scsub{[acc]} about Juda who.\ac{acc} my mountains {through pull}\scsub{[nom]}\\
- `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}
-
-
-
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
-\a. \ac{nom} not attested
-\bg. aer antuurta [demo zaimo sprah]\\
- he replied\scsub{[dat]} who.\ac{dat} {to him} spoke\scsub{[nom]}\\
- `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}
-
-\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
-\a. \ac{acc} not attested
-\b. \ac{nom} not attested
-
-\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-\a. \ac{acc} not attested
-\bg. istû furira Abrâhame, ouh [thên man hiar nû zalta]?\\
- {are you} superior\scsub{[dat]} {to Abraham} also who.\ac{dat} one here now named\scsub{[acc]}\\
- `are you superior to Abraham to those which they just mentioned?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}
-
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
-\a. \ac{dat} not attested
-\b. \ac{nom} not attested
-
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
-\a. \ac{dat} not attested
-\b. \ac{acc} not attested
-
-
-
-Don't know:
-
-\ex. \ac{ohg}
-\ag. gaat uz diu halt za dem iz forchaufent\\
- \\
- `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
-% \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
-%  \\
-%  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
-% \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
-%  \\
-%  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
-\bg. thia laz ih themo iz lisit thar\\
- \\
- `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
-% \bg. noh so neduohti in gnuoge des si habetin\\
-%  \\
-%  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
-% \bg. tannoh pito ih tes noh fore ist (id quod)\\
-%  \\
-%  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
-
-So, to sum up:
-
-
-
-\begin{table}[H]
-  \center
-  \caption {Case attraction in headless relatives in \ac{ohg}}
-    \begin{tabular}{c|c|c|c}
-			\toprule
-				\diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
-						& [\ac{nom}]
-						& [\ac{acc}]
-						& [\ac{dat}]
-						\\ \cmidrule{1-4}
-				[\ac{nom}]
-						& \colorbox{LG}{\ac{nom}}
-						& \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{acc}}}
-						& \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{dat}}}
-						\\ \cmidrule{1-4}
-				[\ac{acc}]
-						& \diagbox[linecolor=white]{*\ac{acc}}{*\ac{nom}}
-						&	\colorbox{LG}{\ac{acc}}
-						&	\diagbox[linecolor=white]{*\ac{acc}}{\colorbox{DG}{\ac{dat}}}
-						\\ \cmidrule{1-4}
-				[\ac{dat}]
-						& \diagbox[linecolor=white]{*\ac{dat}}{*\ac{nom}}
-						&	\diagbox[linecolor=white]{*\ac{dat}}{*\ac{acc}}
-						& \colorbox{LG}{\ac{dat}}
-						\\
-			\bottomrule
-    \end{tabular}
-\end{table}
-
+\input{tables/gothic-summary.tex}
 
 
 
 \subsection{Only from internal: Modern German}
 
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
-\ag. *Ich {lade ein}, [wer mir sympathisch ist].\\
- I invite\scsub{[acc]} who.\ac{nom} me nice is\scsub{[nom]}\\
- `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
-\bg. *Ich {lade ein}, [wen mir sympathisch ist].\\
- I invite\scsub{[acc]} who.\ac{acc} me nice is\scsub{[nom]}\\
+\subsubsection{external case = ungrammatical}
+
+\ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+
+\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
  `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
 
-\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
-\ag. *Ich vertraue, [wer Hitchcock mag].\\
- I trust\scsub{[dat]} who.\ac{nom} Hitchcock likes\scsub{[nom]}\\
- `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
-\bg. *Ich vertraue, [wem Hitchcock mag].\\
- I trust\scsub{[dat]} who.\ac{dat} Hitchcock likes\scsub{[nom]}\\
+\ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+
+\exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
+ I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
  `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
 
-\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
-\ag. Uns besucht [wen Maria mag].\\
- Us visits\scsub{[nom]} who.\ac{acc} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
-\bg. *Uns besucht [wer Maria mag].\\
- Us visits\scsub{[nom]} who.\ac{nom} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
+\ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
 
- \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-\ag. *Ich vertraue [wem auch Maria mag]. \\
- I trust\scsub{[dat]} who.\ac{dat} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
-\bg. *Ich vertraue [wen auch Maria mag]. \\
- I trust\scsub{[dat]} who.\ac{acc} also Maria likes\scsub{[acc]}.\\
+\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+ I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
  `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
 
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
-\ag. Uns besucht [wem Maria vertraut].\\
- us visits\scsub{[nom]} who.\ac{dat} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
-\bg. *Uns besucht [wer Maria vertraut].\\
- us visits\scsub{[nom]} who.\ac{nom} Maria trusts\scsub{[dat]}\\
+
+\subsubsection{internal case = grammatical}
+
+\ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
+
+\ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
+
+\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
+
+\ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
+
+\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
+ us visits\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria trusts\scsub{[dat]}\\
  `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
 
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
-\ag. Ich {lade ein} [wem auch Maria vertraut]. \\
- I invite\scsub{[acc]} who.\ac{dat} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
-\bg. *Ich {lade ein} [wen auch Maria vertraut]. \\
- I invite\scsub{[acc]} who.\ac{acc} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
 
 
  \begin{table}[H]
    \center
-   \caption {Case attraction in headless relatives in \ac{mg}}
-     \begin{tabular}{c|c|c|c}
-			 \toprule
-				 \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
-						 & [\ac{nom}]
-						 & [\ac{acc}]
-						 & [\ac{dat}]
-						 \\ \cmidrule{1-4}
-				 [\ac{nom}]
-						 & \colorbox{LG}{\ac{nom}}
-						 & \diagbox[linecolor=white]{*\ac{nom}}{*\ac{acc}}
-						 & \diagbox[linecolor=white]{*\ac{nom}}{*\ac{dat}}
-						 \\ \cmidrule{1-4}
-				 [\ac{acc}]
-						 & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
-						 &	\colorbox{LG}{\ac{acc}}
-						 &	\diagbox[linecolor=white]{*\ac{acc}}{*\ac{dat}}
-						 \\ \cmidrule{1-4}
-				 [\ac{dat}]
-						 & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
-						 &	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{acc}}
-						 & \colorbox{LG}{\ac{dat}}
-						 \\
-			 \bottomrule
-     \end{tabular}
+   \caption {Summary of \ac{mg} matching headless relative data}
+ 		\begin{tabular}{c|c|c|c}
+ 		  \toprule
+ 			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+ 		        & [\ac{nom}]
+ 		        & [\ac{acc}]
+ 		        & [\ac{dat}]
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{nom}]
+ 		        &
+ 		        &
+ 		        &
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{acc}]
+ 		        & \ac{acc}
+ 		        &
+ 		        &
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{dat}]
+ 		        & \ac{dat}
+ 		        & \ac{dat}
+ 		        &
+ 		        \\
+ 		  \bottomrule
+ 		\end{tabular}
  \end{table}
 
-\subsection{None: Italian}
+
+ \subsection{Only from external: Old High German}
+
+
+  \subsubsection{external is grammatical}
+
+ \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+ \a. \ac{nom} not attested
+ \bg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
+  I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
+  `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}
+
+ \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+ \a. \ac{nom} not attested
+ \bg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
+  he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
+  `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}
+
+ \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
+ \a. \ac{acc} not attested
+ \bg. istû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+  {are you} superior\scsub{[dat]} {to Abraham} also \tsc{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
+  `are you superior to Abraham to those which they just mentioned?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}
+
+
+  \subsubsection{internal is ungrammatical}
+
+  \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
+  \a. \ac{acc} not attested
+  \b. \ac{nom} not attested
+
+ \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
+ \a. \ac{dat} not attested
+ \b. \ac{nom} not attested
+
+ \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
+ \a. \ac{dat} not attested
+ \b. \ac{acc} not attested
+
+
+ Don't know:
+
+ \ex. \ac{ohg}
+ \ag. gaat uz diu halt za dem iz forchaufent\\
+  \\
+  `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
+ % \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+ %  \\
+ %  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
+ % \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+ %  \\
+ %  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
+ \bg. thia laz ih themo iz lisit thar\\
+  \\
+  `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
+ % \bg. noh so neduohti in gnuoge des si habetin\\
+ %  \\
+ %  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
+ % \bg. tannoh pito ih tes noh fore ist (id quod)\\
+ %  \\
+ %  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
+
+ So, to sum up:
+
+
+
+
+
+ \begin{table}[H]
+   \center
+   \caption {Summary of \ac{ohg} matching headless relative data}
+ 		\begin{tabular}{c|c|c|c}
+ 		  \toprule
+ 			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+ 		        & [\ac{nom}]
+ 		        & [\ac{acc}]
+ 		        & [\ac{dat}]
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{nom}]
+ 		        &
+ 		        & \ac{acc}
+ 		        & \ac{dat}
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{acc}]
+ 		        &
+ 		        &
+ 		        & \ac{dat}
+ 		        \\ \cmidrule{1-4}
+ 		    [\ac{dat}]
+ 		        &
+ 		        &
+ 		        &
+ 		        \\
+ 		  \bottomrule
+ 		\end{tabular}
+ \end{table}
 
 
 
@@ -226,7 +267,6 @@ So, to sum up:
 		Gothic		& \tsc{a} +\tsc{c}					&	\tsc{a} + \tsc{a} + \tsc{c}			\\
 		\ac{ohg}	&	\tsc{a} 									&	\tsc{a} + \tsc{a} 							\\
 		\ac{mg}		& \tsc{b} 									&	\tsc{a} + \tsc{a} 							\\
-		Italian		& \tsc{b} 									&	\tsc{a} + \tsc{b} 							\\
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -325,16 +365,6 @@ Pattern in light-headed relatives: \tsc{d}, \tsc{d}
 
 
 
-\subsection{Italian}
-
-\subsubsection{Headless relatives}
-
-\tsc{wh}: \tit{che}
-
-\subsubsection{Light-headed relatives}
-
-\tsc{d}, \tsc{wh}: \tit{quello}, \tit{che}
-
 
 \section{Bringing this together}
 
@@ -348,14 +378,24 @@ Pattern in light-headed relatives: \tsc{d}, \tsc{d}
 		Gothic 		& \tsc{a} +\tsc{c}					&	\tsc{a} + \tsc{a} + \tsc{c}			& ✔										&	✔									\\
 		\ac{ohg}	& \tsc{a} 									&	\tsc{a} + \tsc{a} 							& *										&	✔									\\
 		\ac{mg}		&	\tsc{b} 									&	\tsc{a} + \tsc{a} 							& ✔										&	*									\\
-		Italian		& \tsc{b} 									&	\tsc{a} + \tsc{b} 							& *										&	*									\\
 		\bottomrule
 	\end{tabular}
 \end{table}
 
 And how can we now derive this?
 
-\subsection{All allow for matching ones}
+
+
+
+
+\section{Two points: all or nothing}
+
+\subsection{No matches work}
+
+Italian doesnt allow any of them, because it has \tit{d, wh} as light headed relative?
+
+
+\subsection{All allow for matching ones (and syncretic ones! whuut)}
 
 First, I discuss the matching headless relatives, in which the internal and external case match.
 
