--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -23,6 +23,7 @@
 boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 }
 \usepackage{tikz}
+\usetikzlibrary{shapes,arrows,positioning}
 %%%TREES%%%
 
 
