--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -420,14 +420,22 @@
   doi={10.1007/s11049-013-9206-8}
 }
 
-
 @article{vanbaal2018,
   title={Universals in possessive morphology},
   author={Van Baal, Yvonne and Don, Jan},
   journal={Glossa: a journal of general linguistics},
   volume={3},
   number={1},
-  pages={1--19},
   year={2018},
   doi={10.5334/gjgl.395}
+}
+
+@article{vandenwyngaerd2020,
+  title={How to be positive},
+  author={Vanden Wyngaerd, Guido and Starke, Michal and De Clercq, Karen and Caha, Pavel},
+  journal={Glossa: a journal of general linguistics},
+  volume={5},
+  number={1},
+  year={2020},
+  doi={10.5334/gjgl.1114}
 }
