--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -439,3 +439,13 @@
   year={2020},
   doi={10.5334/gjgl.1114}
 }
+
+@article{starke2014,
+  title={Cleaning up the lexicon},
+  author={Starke, Michal},
+  journal={Linguistic Analysis},
+  volume={39},
+  pages={245--256},
+  year={2014},
+  doi={}
+}
