--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -1,16 +1,16 @@
 % !TEX root = thesis.tex
 
-\chapter{Case decomposition meets ellipsis}
+\chapter{Case decomposition and ellipsis}
 
-At the beginning of the previous chapter I showed that the case scale \tsc{nom < acc < dat} appears in headless. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} notes: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
+At the beginning of the previous chapter I showed that the case scale \tsc{nom < acc < dat} appears in headless relatives. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} makes this explicit: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
 What I showed as well in the previous chapter is the case scale \tsc{nom < acc < dat} is a wide-spread phenomenon: it recurs. The scale can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
 In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.}
-The case scale also appears within morphology in syncretism patterns and formal containment. \pgcitet{pittner1995}{201:fn.4} mentioned the role of morphology: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
+The case scale also appears within morphology in syncretism patterns and formal containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
-The question arises what the nature of this case hierarchy is. Are there multiple hierarchies active in different subparts of language (i.e. syntax and morphology)? Or is there a single hierarchy that is made reference to from different the subparts of syntax and morphology? And how are syntax and morphology then connected? I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.]{caha2019}.\footnote{
-This intuition has been worked out in a different way in \posscitet{himmelreich2017} dissertation.
-} Specifically, I show that the case scale naturally follows assuming that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.
+I am not after a theory in which the case hierarchy is not something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
+\citet{himmelreich2017} works this intuition out in a different way.
+}
 
 In this chapter I show that the case scale can be derived is case is decomposed. The precise facts in headless relatives relatives follow after adding an ellipsis that deletes phrases.
 
@@ -56,23 +56,27 @@ The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive t
 
 %should I talk about alternatives and why they do not work?
 
-\subsection{Deriving case containment}
 
-In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
+\subsection{Deriving syncretism}
+
+In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
 
 \begin{table}[ht]
   \center
-  \caption {Containment in \tsc{3sg} in Khanty}
-    \input{tables/containment-nom-acc-dat.tex}
-  \label{tbl:cont-khanty-3sg}
+  \caption {Syncretism pattern}
+    \input{tables/syncretism-nom-acc-dat.tex}
+  \label{tbl:syncretisms-derive}
 \end{table}
 
-The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
+The intuition is the following.
 
-I work the proposal in this dissertation out in Nanosyntax. I provide background assumptions on the framework wherever necessary to follow the discussion as I proceed. At this point I discuss the general architecture of Nanosyntax and its lexicon.
+ % The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
+
+
+The proposal in this dissertation is worked out in Nanosyntax. I provide background assumptions on the framework whenever necessary to follow the discussion as I proceed. At this point I discuss the general architecture of Nanosyntax, its lexicon, phrasal spellout and matching between syntax and the lexicon.
 
 The architecture of Nanosyntax is schematically shown in Figure \ref{fig:nano} \citep[from][]{vandenwyngaerd2020,caha2019}. In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' that enter the syntax. The only way complex feature structures come to exist is a a result of merge.
-After syntax (more specifically, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between syntactic representations on the one hand and phonology (PF) and concepts (CF) on the other hand. So, Nanosyntax is a late insertion model: syntax happens before (lexical) insertion takes place.
+After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between syntactic representations on the one hand and phonology (PF) and concepts (CF) on the other hand. So, Nanosyntax is a late insertion model: (lexical) insertion takes place late, namely after syntax.
 
 \begin{figure}[ht]
   \centering
@@ -91,30 +95,50 @@ After syntax (more specifically, each instance of merge), the syntactic structur
   \label{fig:nano}
 \end{figure}
 
-Now we turn to what the lexicon looks like in Nanosyntax.
+In Nanosyntax, the lexicon is nothing but links between syntactic representations, phonological representations and conceptual representations \citep{starke2014}.\footnote{
+The syntactic representation does not have to correspond to both a phonological and a conceptual representation. Syntactic representation that only correspond to a conceptual representations and not to phonological representations are (phrasal or clausal) idioms. Syntactic representations that only correspond to phonological representations but not to conceptual representations are for instance irregular plurals.
+}
+%I leave out semantics here, because it's not so important for case here.
+The fact that only syntax can create complex feature structures also has a consequence for the content of the lexicon.
+Syntactic structures are constrained by certain principles, such that only well-formed syntactic structures exist. Since the lexical items from the lexicon link syntactic representation to phonological and conceptual representation, these syntactic representations are constrained by the same principles as syntactic trees are. As a result, the lexicon only contains well-formed syntactic structures. The lexicon does not contain unstructured `feature bundles', because they could never be created by syntax.
 
-In the lexicon there are lexical entries.
+Following complex structures only be created with merge, a lexical entries as xxx do not exist. This cannot be the result of merge and syntax starts with atomic features.
+
+\ex. [ \tsc{f}1, \tsc{f}2, \tsc{f}3 ]
+
+instead, we have a tree
+
+\ex. \begin{forest} boom
+  [\ac{dat}P
+      [\ac{f}3]
+      [\ac{acc}P
+          [\ac{f}2]
+          [\ac{nom}P
+              [\ac{f}1]
+              ]
+          ]
+      ]
+  ]
+\end{forest}
+
+phrasal spellout
+multiple features with a single element
+
+% A crucial part of this model is the idea that linking syntactically wellformed
+% objects to phonology is not restricted to terminals. Since phrases
+% containing multiple terminals are also well-formed syntactic objects, they
+% may be easily pronounced by a single piece of phonology (a single morpheme
+% in the traditional sense), provided these terminals form a constituent
+% (i.e., they correspond to a syntactic object). An example is provided in (20)
+% by the entry for an M-root. It will become clear in the course of the discussion
+% that in our model, spellout in fact has to target phrasal nodes and
+% cannot target terminals.
 
 
-what's in the lexion?
 
-Following Starke (2014), I understand lexical entries as nothing else but links
-between well-formed syntactic representations, well formed phonological representations,
-and/or conceptual representations. One of the motivations for adopting
-this view is to have a ‘principled’ theory of the lexicon. What ‘principled’
-means is not that lexical items are no longer arbitrary associations between syntax,
-phonology and/or conceptual meaning; they still are. Rather, ‘principled’
-is used in the sense that the format of the lexical item is restricted. Since wellformed
-syntactic structures are constrained by principles, and lexical items link
-such representations to their pronunciation (a phonological representation), it
-follows that the representations in a lexical entry are constrained by universal
-principles (the same ones that regulate what syntactic trees look like).
+Let us apply this now to pronouns. I simplify. (1) I do not show internal complexity of pronouns, including person and number features. I just make a triangle.
 
-
-
-
-
-case trees
+For Faroese specific, (2) make Faroese pronouns monomorphemic
 
 \ex.
 \a.
@@ -122,7 +146,7 @@ case trees
   [\ac{nom}P
       [\ac{f}1]
       [NP
-          [..., roof]
+          [3\tsc{sg}, roof]
       ]
   ]
 \end{forest}
@@ -132,7 +156,7 @@ case trees
       [\ac{f}2]
       [\ac{nom}P
           [\ac{f}1]
-          [NP
+          [3\ac{sg}
               [..., roof]
           ]
       ]
@@ -146,7 +170,7 @@ case trees
           [\ac{f}2]
           [\ac{nom}P
               [\ac{f}1]
-              [NP
+              [3\ac{sg}
                   [..., roof]
               ]
           ]
@@ -154,26 +178,69 @@ case trees
   ]
 \end{forest}
 
-now let's look at the case decomposition example again
+not only exact matching works
+
+
+\ex. \tbf{The Superset Principle} \citet{starke2009}:\\
+A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
+
+What the Superset Principle states is that matching between a lexical tree and a syntactic tree does not require full identity, but ‘only’ containment.
+
+jullie: a single lexical entry for all
+
+\ex.
+\begin{forest} boom
+  [\ac{dat}P
+      [\ac{f}3]
+      [\ac{acc}P
+          [\ac{f}2]
+          [\ac{nom}P
+              [\ac{f}1]
+              [2\ac{pl}
+                  [..., roof]
+              ]
+          ]
+      ]
+  ]
+\end{forest}
+
+minimize junk
+
+\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2019}):\\
+When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
+
+sie for acc
+ihr for dat
+
+okkur for dat
+vidxd for nom
+
+
+no ABA
+
+
+
+\subsection{Deriving case containment}
+
+In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
 
 \begin{table}[ht]
   \center
-  \caption {Containment pattern}
+  \caption {Containment in \tsc{3sg} in Khanty}
     \input{tables/containment-nom-acc-dat.tex}
-  \label{tbl:containment-derive}
+  \label{tbl:cont-khanty-3sg}
 \end{table}
 
+The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
+
 first the nominative
-\footnote{
-I address the issue of phrasal spellout in the next section.
-}
 
 \ex.
 \begin{forest} boom
   [\ac{nom}P
       [\ac{nom}]
-      [NP
-          [\tsc{3sg}, roof]
+      [3\ac{sg}
+          [.., roof]
       ]
   ]
   {\draw (.east) node[right]{⇔ \tit{luw}}; }
@@ -195,9 +262,6 @@ fit=(nomp)(nom)(3sg)(np)]{};
 \end{forest}
 
 then the accusative
-\footnote{
-I will come back to the movement later.
-}
 
 \ex. \begin{forest} boom
   [\ac{acc}P
@@ -205,6 +269,8 @@ I will come back to the movement later.
   ]
   {\draw (.east) node[right]{⇔ \tit{-e:l}}; }
 \end{forest}
+
+but movement
 
 \ex. \begin{forest} boom
 [\ac{acc}P,name=accp2, s sep=20mm
@@ -283,40 +349,6 @@ then dative
 
 
 
-\subsection{Deriving syncretism}
-
-basic background on matching in nano
-
-phrasal spellout
-multiple features with a single element
-
-faroese all different
-
-
-
-
-\ex. \tbf{The Superset Principle} \citet{starke2009}:\\
-A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
-
-What the Superset Principle states is that matching between a lexical tree and a syntactic tree does not require full identity, but ‘only’ containment.
-
-\begin{table}[ht]
-  \center
-  \caption {Syncretism pattern}
-    \input{tables/syncretism-nom-acc-dat.tex}
-  \label{tbl:syncretisms-derive}
-\end{table}
-
-jullie: a single lexical entry for all
-
-\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2019}):\\
-When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
-
-sie for acc
-ihr for dat
-
-okkur for dat
-vidxd for nom
 
 
 
@@ -327,19 +359,19 @@ Ellipsis targets phrases
 it does not delete elements one by one
 
 (1) Sluicing
-Someone stayed out until 7am,
-but I have no idea who stayed out until 7 am.
+Someone woke up early
+but I have no idea who woke up early.
 
 (2) VP ellipsis
-Elin stayed out until 7am, and Fraser did stay out until 7 am too.
+John woke up early, and Mary did wake up early.
 
 (3) Fragment answers
-Q: Who stayed out until 7am?
-A: Elin stayed out until 7am
+Q: Who woke up early?
+A: John woke up early
 
 
 (Õ) VP Ellipsis:
-a. Betsy was hassled by the police and Peter was [VP hassled by the police ] too.
+a. John was hassled by the police and Mary was [VP hassled by the police ] too.
 b. John put his beer on the floor, so Mary did [VP put her beer on the floor ]
 
 
@@ -572,11 +604,3 @@ b. John put his beer on the floor, so Mary did [VP put her beer on the floor
       \end{forest}\\
   \end{tabular}
 \end{table}
-
-
-
-
-
-\section{Similar analyses}
-
-Himmelreich
